Fixed over-scrolling on Overview page
Previously the overview page would allow for a small (and pointless)
horizontal scroll when viewed on mobile devices.  This should fix that
bug.

--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,7 @@ hr {
     text-align: center;
     font-size: 1.2em;
     font-family:monospace;
+    width:100%;
 }
 
 #linkPageBody {
@@ -371,12 +372,13 @@ body:before {
 @media only screen and (max-width: 768px) {
     #overviewPage {
         width:100%;
+        padding:0em;
+    
     }
     #overviewPage .module {
         float:none;
         width:70%;
         margin:0 auto;
-        margin-left: 8%;
         height:100%;
     }
     
